--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Basic Weather app using openweathermap.org</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-
-    <h1>Find the weather for your city</h1>
-
-    <form name="findLocation">
-        <input type="text" name="city" value="Toronto, CA">
-        <input type="submit" id="go" value="Go">
-    </form>
-
-    <p>You can enter the name of the city (London), or the city followed by a two letter country code (London, GB)</p>
-    <hr>
-
-    <div id="output"></div>
-
-    <script src="js/app.js"></script>
-
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>React App</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
